--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Boilerplate",
+  "name": "TestApp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -21,6 +21,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-svg": "^12.1.0",
     "react-navigation": "^3.11.2",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
