--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-sqlite-storage": "^5.0.0",
     "react-native-svg": "^12.1.0",
     "react-navigation": "^3.11.2",
     "react-redux": "^6.0.1",
